# dopelib

./: .gitignore  CHANGELOG.txt  CITATION.cff  LICENSE.TXT  NAMING.txt  README  README.OSX  TODO.txt  indent
DOpEsrc/: .gitignore  CMakeLists.txt  DOpElibConfig.cmake.in  Makefile  autocmake.sh
DOpEsrc/basic/: .#mol_spacetimehandler.h.1.24  DOpEtypes.h  constraints.h  dirichletdescriptor.h  dopetypes.h  mol_multimesh_spacetimehandler.h  mol_spacetimehandler.h  mol_statespacetimehandler.h  rothe_statespacetimehandler.h  rothe_statespacetimehandler_katrin.h  spacetimehandler.h  spacetimehandler_base.h  statespacetimehandler.h  sth_internals.h  test_mol_spacetimehandler.h
DOpEsrc/cmake/: macro_add_library.cmake  macro_set_if_empty.cmake  macro_set_properties.cmake
DOpEsrc/container/: celldatacontainer.h  celldatacontainer_internal.h  dwrdatacontainer.h  eigenvalueproblemcontainer.h  elementdatacontainer.h  elementdatacontainer_internal.h  facedatacontainer.h  facedatacontainer_internal.h  higher_order_dwrc.h  higher_order_dwrc_control.h  instatoptproblemcontainer.h  instatpdeproblemcontainer.h  integratordatacontainer.h  interpolatedelementdatacontainer.h  interpolatedfacedatacontainer.h  interpolatedintegratordatacontainer.h  multimesh_celldatacontainer.h  multimesh_elementdatacontainer.h  multimesh_facedatacontainer.h  optproblem.h  optproblemcontainer.h  pdeproblemcontainer.h  problemcontainer_internal.h  refinementcontainer.h  residualestimator.h
DOpEsrc/include/: augmentedlagrangianproblem.h  backward_euler_problem.h  constraintsmaker.h  constraintvector.h  controlvector.h  crank_nicolson_problem.h  dofconstraintsmaker.h  dopeexception.h  dopeexceptionhandler.h  fe_interpolated_values.h  forward_euler_problem.h  fractional_step_theta_problem.h  functionalinterface.h  helloworld.h  helper.h  higher_order_dwrc.h  interpolated_fe_face_values.h  interpolated_fe_values.h  outputhandler.h  parallel_vectors.h  parameterreader.h  pointconstraintsmaker.h  reducednewtonalgorithm.h  shifted_crank_nicolson_problem.h  solutionextractor.h  spacetimevector.h  sparsitymaker.h  statevector.h  sth_internals.h  timedofhandler.h  timeiterator.h  userdefineddofconstraints.h  version.h  versionscheck.h
DOpEsrc/interfaces/: active_fe_index_setter_interface.h  constraintinterface.h  dirichletdatainterface.h  functionalinterface.h  pdeinterface.h  pdeprobleminterface.h  reducedprobleminterface.h  transposeddirichletdatainterface.h
DOpEsrc/network/: mol_network_spacetimehandler.h  network_directlinearsolver.h  network_elementdatacontainer.h  network_elementdatacontainer_internal.h  network_facedatacontainer.h  network_facedatacontainer_internal.h  network_integrator.h  network_integratordatacontainer.h  network_integratormixeddims.h  network_statreducedproblem.h  networkinterface.h
DOpEsrc/opt_algorithms/: algorithmForEigenvalueproblem.h  generalized_mma_algorithm.h  reduced_ipopt_algorithm.h  reduced_snopt_algorithm.h  reducedalgorithm.h  reducedbfgsalgorithm.h  reduceddampedbfgsalgorithm.h  reducedgradientdescentalgorithm.h  reducedgradientdescentalgorithm_eigenvalueproblems.h  reducednewtonalgorithm.h  reducednewtonalgorithmwithinverse.h  reducedproximalgradientdescentalgorithm.h  reducedtrustregionnewton.h
DOpEsrc/parallel/: newtonsolver.h
DOpEsrc/problemdata/: adjoint_hessianproblem.h  adjointdirichletdata.h  adjointproblem.h  auxiliarynodalerrorproblem.h  eigenvalueadjointproblem.h  eigenvaluederivativeproblem.h  eigenvaluestateproblem.h  initialnewtonproblem.h  initialproblem.h  noconstraints.h  opt_adjoint_for_eeproblem.h  pde_adjoint_for_eeproblem.h  primaldirichletdata.h  simpledirichletdata.h  stateproblem.h  tangentdirichletdata.h  tangentproblem.h  transposedgradientdirichletdata.h  transposedhessiandirichletdata.h
DOpEsrc/reducedproblems/: eigenvaluereducedproblem.h  forwardtimestepreducedproblem.h  instatpdeproblem.h  instatreducedproblem.h  ipopt_problem.h  statpdeproblem.h  statreducedproblem.h  voidreducedproblem.h
DOpEsrc/source/: CMakeLists.txt  Makefile  celldatacontainer.cc  celldatacontainer_internal.cc  constraintvector.cc  controlvector.cc  dofhandler_wrapper.cc  dopeexceptionhandler.cc  facedatacontainer.cc  fe_interpolated_face_values.cc  fe_interpolated_values.cc  forwardtimestepreducedproblem.cc  functionalinterface.cc  helloworld.cc  helper.cc  instatoptproblemcontainer.cc  instatreducedproblem.cc  interpolated_fe_face_values.cc  interpolated_fe_values.cc  mapping_wrapper.cc  mol_spacetimehandler.cc  multimesh_celldatacontainer.cc  multimesh_facedatacontainer.cc  optproblem.cc  outputhandler.cc  pdeinterface.cc  pdeproblemcontainer.cc  reducedalgorithm.cc  reducednewtonalgorithm.cc  reducedprobleminterface.cc  refinementcontainer.cc  spacetimevector.cc  statevector.cc  statpdeproblem.cc  statreducedproblem.cc
DOpEsrc/templates/: cglinearsolver.h  directlinearsolver.h  eigenvalue_solver.h  eigenvalue_solver1.h  eigenvalue_solver2.h  eigenvalue_solver_lapack.h  eigenvalue_solver_test.h  fractional_step_theta_step_newtonsolver.h  gmreslinearsolver.h  instat_step_newtonsolver.h  integrator.h  integrator_multimesh.h  integratoreigenvalue.h  integratormixeddims.h  minreslinearsolver.h  newtonsolver.h  newtonsolver_eigenvalueproblems.h  newtonsolvermixeddims.h  qmrslinearsolver.h  richardsonlinearsolver.h  trilinosdirectlinearsolver.h  voidlinearsolver.h
DOpEsrc/tsschemes/: backward_euler_problem.h  crank_nicolson_problem.h  forward_euler_problem.h  fractional_step_theta_problem.h  primal_ts_base.h  shifted_crank_nicolson_problem.h  ts_base.h
DOpEsrc/wrapper/: dataout_wrapper.h  dofhandler_wrapper.h  fevalues_wrapper.h  finiteelement_wrapper.h  function_wrapper.h  mapping_wrapper.h  preconditioner_wrapper.h  snopt_wrapper.h  solutiontransfer_wrapper.h
Examples/: CMakeExamples.txt  (+8 more)
Examples/OPT/StatPDE/Example1/: CMakeLists.txt  Makefile  content.tex  dope.prm  functionals.h  localfunctional.h  localpde.h  main.cc
Examples/OPT/StatPDE/Example2/: CMakeLists.txt  Makefile  content.tex  dope.prm  localfunctional.h  localpde.h  main.cc  myfunctions.h
(+905 files in other folders)
